Add some more validations

--- a/src/main/webapp/app/account/password/password.component.html
+++ b/src/main/webapp/app/account/password/password.component.html
@@ -2,21 +2,21 @@
   <div class="row justify-content-center">
     <div class="col-md-8" *ngIf="account$ | async as account">
       <h2>
-        Password for [<strong>{{ account.login }}</strong
+        Parola pentru [<strong>{{ account.login }}</strong
         >]
       </h2>
 
       <div class="alert alert-success" *ngIf="success">
-        <strong>Password changed!</strong>
+        <strong>Parola schimbata!</strong>
       </div>
 
-      <div class="alert alert-danger" *ngIf="error"><strong>An error has occurred!</strong> The password could not be changed.</div>
+      <div class="alert alert-danger" *ngIf="error"><strong>A aparut o eroare!</strong> Parola nu a putut fi schimbata.</div>
 
-      <div class="alert alert-danger" *ngIf="doNotMatch">The password and its confirmation do not match!</div>
+      <div class="alert alert-danger" *ngIf="doNotMatch">Parola si confirmarea parolei nu se potrivesc!</div>
 
       <form name="form" role="form" (ngSubmit)="changePassword()" [formGroup]="passwordForm">
         <div class="form-group">
-          <label class="form-control-label" for="currentPassword">Current password</label>
+          <label class="form-control-label" for="currentPassword">Parola curenta</label>
           <input
             type="password"
             class="form-control"
@@ -34,13 +34,13 @@
             "
           >
             <small class="form-text text-danger" *ngIf="passwordForm.get('currentPassword')?.errors?.required">
-              Your password is required.
+              Parola este necesara.
             </small>
           </div>
         </div>
 
         <div class="form-group">
-          <label class="form-control-label" for="newPassword">New password</label>
+          <label class="form-control-label" for="newPassword">Parola noua</label>
           <input
             type="password"
             class="form-control"
@@ -58,15 +58,15 @@
             "
           >
             <small class="form-text text-danger" *ngIf="passwordForm.get('newPassword')?.errors?.required">
-              Your password is required.
+              Parola este necesara.
             </small>
 
             <small class="form-text text-danger" *ngIf="passwordForm.get('newPassword')?.errors?.minlength">
-              Your password is required to be at least 4 characters.
+              Parola trebuie sa aiba minim 4 caractere.
             </small>
 
             <small class="form-text text-danger" *ngIf="passwordForm.get('newPassword')?.errors?.maxlength">
-              Your password cannot be longer than 50 characters.
+              Parola nu poate fi mai mare de 50 de caractere.
             </small>
           </div>
 
@@ -74,7 +74,7 @@
         </div>
 
         <div class="form-group">
-          <label class="form-control-label" for="confirmPassword">New password confirmation</label>
+          <label class="form-control-label" for="confirmPassword">Confirmarea parolei</label>
           <input
             type="password"
             class="form-control"
@@ -92,20 +92,20 @@
             "
           >
             <small class="form-text text-danger" *ngIf="passwordForm.get('confirmPassword')?.errors?.required">
-              Your confirmation password is required.
+              Confirmarea parolei este necesara.
             </small>
 
             <small class="form-text text-danger" *ngIf="passwordForm.get('confirmPassword')?.errors?.minlength">
-              Your confirmation password is required to be at least 4 characters.
+              Confirmarea parolei trebuie sa aiba minim 4 caractere.
             </small>
 
             <small class="form-text text-danger" *ngIf="passwordForm.get('confirmPassword')?.errors?.maxlength">
-              Your confirmation password cannot be longer than 50 characters.
+              Confirmarea parolei nu poate avea mai mult de 50 de caractere.
             </small>
           </div>
         </div>
 
-        <button type="submit" [disabled]="passwordForm.invalid" class="btn btn-primary" data-cy="submit">Save</button>
+        <button type="submit" [disabled]="passwordForm.invalid" class="btn btn-primary" data-cy="submit">Salvare</button>
       </form>
     </div>
   </div>
