--- a/src/main/webapp/app/login/login.component.html
+++ b/src/main/webapp/app/login/login.component.html
@@ -1,13 +1,13 @@
 <div>
   <div class="row justify-content-center">
     <div class="col-lg-6 col-md-8 col-sm-10">
-      <h1 data-cy="loginTitle">Sign in</h1>
+      <h1 data-cy="loginTitle">Logare</h1>
       <div class="alert alert-danger" *ngIf="authenticationError" data-cy="loginError">
-        <strong>Failed to sign in!</strong> Please check your credentials and try again.
+        <strong>Eroare la logare!</strong> Va rugam verificati credentialele si incercati din nou.
       </div>
       <form class="form" role="form" (ngSubmit)="login()" [formGroup]="loginForm">
         <div class="form-group">
-          <label class="username-label" for="username">Login</label>
+          <label class="username-label" for="username">Username</label>
           <input
             type="text"
             class="form-control"
@@ -21,7 +21,7 @@
         </div>
 
         <div class="form-group">
-          <label for="password">Password</label>
+          <label for="password">Parola</label>
           <input
             type="password"
             class="form-control"
@@ -33,22 +33,19 @@
           />
         </div>
 
-        <div class="form-check">
+        <!-- <div class="form-check">
           <label class="form-check-label" for="rememberMe">
             <input class="form-check-input" type="checkbox" name="rememberMe" id="rememberMe" formControlName="rememberMe" />
             <span>Remember me</span>
           </label>
-        </div>
+        </div> -->
 
-        <button type="submit" class="btn btn-primary" data-cy="submit">Sign in</button>
+        <button type="submit" class="btn btn-primary" data-cy="submit">Conectare</button>
       </form>
-      <div class="mt-3 alert alert-warning">
-        <a class="alert-link" routerLink="/account/reset/request" data-cy="forgetYourPasswordSelector">Did you forget your password?</a>
-      </div>
 
       <div class="alert alert-warning">
-        <span>You don't have an account yet?</span>
-        <a class="alert-link" routerLink="/account/register">Register a new account</a>
+        <span>Nu ai un cont ?</span>
+        <a class="alert-link" routerLink="/account/register">Inregistreaza-te</a>
       </div>
     </div>
   </div>
